--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.2.0",
+    "@mui/material": "^7.2.0",
     "bcryptjs": "^3.0.2",
-    "jsonwebtoken": "^9.0.2"
+    "cors": "^2.8.5",
+    "jsonwebtoken": "^9.0.2",
+    "recharts": "^3.0.2"
   }
 }
